	    Tomas Hozza for spotting this.

	    Remove floor of 4096 on advertised EDNS0 packet size when 
	    DNSSEC in use, the original rationale for this has long gone.
	    Thanks to Anders Kaseorg for spotting this.

	    Use inotify for checking on updates to /etc/resolv.conf and
	    friends under Linux. This fixes race conditions when the files are 
	    updated rapidly and saves CPU by noy polling.

	    Fix breakage of --domain=<domain>,<subnet>,local - only reverse
	    queries were intercepted. THis appears to have been broken 
	    since 2.69. Thanks to Josh Stone for finding the bug.

	    Eliminate IPv6 privacy addresses and deprecated addresses from
	    the answers given by --interface-name. Note that reverse queries
	    (ie looking for names, given addresses) are not affected. 
	    Thanks to Michael Gorbach for the suggestion.

	    Fix crash in DNSSEC code with long RRs. Thanks to Marco Davids
	    for the bug report.
	    
	    Add --ignore-address option. Ignore replies to A-record 
	    queries which include the specified address. No error is
	    generated, dnsmasq simply continues to listen for another 
	    reply. This is useful to defeat blocking strategies which
	    rely on quickly supplying a forged answer to a DNS 
	    request for certain domains, before the correct answer can
            arrive. Thanks to Glen Huang for the patch.
	
	    Revisit the part of DNSSEC validation which determines if an 
	    unsigned answer is legit, or is in some part of the DNS 
	    tree which should be signed. Dnsmasq now works from the 
	    DNS root downward looking for the limit of signed 
	    delegations, rather than working bottom up. This is 
	    both more correct, and less likely to trip over broken 
	    nameservers in the unsigned parts of the DNS tree 
	    which don't respond well to DNSSEC queries.

	    Add --log-queries=extra option, which makes logs easier
	    to search automatically.
